----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-02-24 Alexander M. Turek  <rabus@users.sourceforge.net>
    * lang/bulgarian-*.inc.php3, lang/czech-*.inc.php3, lang/dutch-*.inc.php3,
      lang/swedish-*.inc.php3, lang/thai-*.inc.php3: Removed problematic %e from
      $datefmt (translations #692065).
    * lang/japanese-*.inc.php3: Fixed some inconsistences.

2003-02-25 Garvin Hicking <me@supergarv.de>
    * tbl_properties.inc.php3: Fixed duped display of comments due to
      merging diff conflict.

2003-02-24 Alexander M. Turek  <rabus@users.sourceforge.net>
    * common.lib.php3: Backwards compatibility.

2003-02-24 Garvin Hicking <me@supergarv.de>
    Submitted multiple patches from the patch tracker:

    * JS rowmarker now works in vertical display mode
        Files: libraries/functions.js, display_tbl.lib.php3

    * Display nav_bar even when only one row is returned, to enable display in
        vertical/horizontal mode (especially for rotated headers)
        Files: libraries/display_tbl.lib.php3

    * Measures basic query time [#571934]
        Files: sql.php3, display_tbl.lib.php3

    * New display mode with 90 degree rotated table headers [#544361]. Works
        either as CSS or as 'faked' PHP-transformation.
        Files: libraries/common.lib.php3, libraries/display_tbl.lib.php3

    * Update and display column comments in Add/Edit Fieldmode and CREATE table
        mode. Display comments in table structure (optional) with underlined
        CSS-mouseovers. Display comments in browser mode (optional), both in
        vertical and horizontal display mode. Keep column comments in synch, when
        DROPping/ALTERing and moving/copying tables.
        Files: tbl_addfield.php3, tbl_alter.php3, tbl_create.php3,
        tbl_properties.inc.php3, tbl_properties_structure.php3, db_details_links,
        tbl_relation.php3,tbl_move_copy.php3, tbl_properties_links.php3,