@@ -91,9 +91,9 @@ $cfg['Servers'][$i]['table_info']    = '';          // table to describe the dis
 $cfg['Servers'][$i]['table_coords']  = '';          // table to describe the tables position for the PDF
                                                     //   schema - leave blank for no PDF schema support
 $cfg['Servers'][$i]['pdf_pages']     = '';          // table to describe pages of relationpdf
-                                                    // - leave blank if you don't want to use this
-$cfg['Servers'][$i]['column_comments']              // table to store columncomments
-                                     = '';          // - leave blank if you don't want to use this
+                                                    //   - leave blank if you don't want to use this
+$cfg['Servers'][$i]['column_info']   = '';          // table to store column information
+                                                    //   - leave blank if you don't want to use this
 $cfg['Servers'][$i]['AllowDeny']['order']           // Host authentication order, leave blank to not use
                                      = '';
 $cfg['Servers'][$i]['AllowDeny']['rules']           // Host authentication rules, leave blank for defaults
@@ -119,7 +119,7 @@ $cfg['Servers'][$i]['relation']        = '';
 $cfg['Servers'][$i]['table_info']      = '';
 $cfg['Servers'][$i]['table_coords']    = '';
 $cfg['Servers'][$i]['pdf_pages']       = '';
-$cfg['Servers'][$i]['column_comments'] = '';
+$cfg['Servers'][$i]['column_info']     = '';
 $cfg['Servers'][$i]['AllowDeny']['order']
                                        = '';
 $cfg['Servers'][$i]['AllowDeny']['rules']
@@ -144,7 +144,7 @@ $cfg['Servers'][$i]['relation']        = '';
 $cfg['Servers'][$i]['table_info']      = '';
 $cfg['Servers'][$i]['table_coords']    = '';
 $cfg['Servers'][$i]['pdf_pages']       = '';
-$cfg['Servers'][$i]['column_comments'] = '';
+$cfg['Servers'][$i]['column_info']     = '';
 $cfg['Servers'][$i]['AllowDeny']['order']
                                        = '';
 $cfg['Servers'][$i]['AllowDeny']['rules']
@@ -179,8 +179,8 @@ $cfg['UseDbSearch']           = TRUE;   // whether to enable the "database searc
 $cfg['LeftFrameLight']        = TRUE;   // use a select-based menu and display only the
                                         // current tables in the left frame.
 $cfg['ShowTooltip']           = TRUE;   // display table comment as tooltip in left frame
-$cfg['ShowTooltipAliasDB']    = FALSE;  // if ShowToolTip is enabled, this defines that table/db comments 
-$cfg['ShowTooltipAliasTB']    = FALSE;  // are shown (in the left menu and db_details_structure) instead of 
+$cfg['ShowTooltipAliasDB']    = FALSE;  // if ShowToolTip is enabled, this defines that table/db comments
+$cfg['ShowTooltipAliasTB']    = FALSE;  // are shown (in the left menu and db_details_structure) instead of
                                         // table/db names
 
 $cfg['LeftDisplayLogo']       = TRUE;   // display logo at top of left frame
@@ -366,10 +366,10 @@ $cfg['ModifyDeleteAtLeft']  = TRUE;         // show edit/delete links on left si
                                             // (or at the top with vertical browse)
 $cfg['ModifyDeleteAtRight'] = FALSE;        // show edit/delete links on right side of browse
                                             // (or at the bottom with vertical browse)
-$cfg['DefaultDisplay']      = 'horizontal'; // default display direction 
+$cfg['DefaultDisplay']      = 'horizontal'; // default display direction
                                             // (horizontal|vertical|horizontalflipped)
-$cfg['HeaderFlipType']		= 'css';        // table-header rotation via faking or css? (css|fake)
-$cfg['ShowBrowseComments']	= TRUE;         // shows stored relation-comments in 'browse' mode.
+$cfg['HeaderFlipType']        = 'css';        // table-header rotation via faking or css? (css|fake)
+$cfg['ShowBrowseComments']    = TRUE;         // shows stored relation-comments in 'browse' mode.
 $cfg['ShowPropertyComments']= TRUE;         // shows stored relation-comments in 'table property' mode.
 $cfg['RepeatCells']         = 100;          // repeat header names every X cells? (0 = deactivate)
 
@@ -379,7 +379,7 @@ $cfg['QueryFrameJS']        = TRUE;         // whether to use JavaScript functio
 $cfg['QueryFrameDebug']     = FALSE;        // display JS debugging link (DEVELOPERS only)
 $cfg['QueryWindowWidth']     = 750;          // Width of Query window
 $cfg['QueryWindowHeight']    = 300;          // Height of Query window
- 
+
 $cfg['BrowseMIME']          = TRUE;         // Use MIME-Types (stored in column comments table) for
 
 /**
